@@ -178,6 +178,7 @@ TESTS =						\
   unibyte-bracket-expr				\
   unibyte-negated-circumflex			\
   utf8-bracket					\
+  version-pcre					\
   warn-char-classes				\
   word-delim-multibyte				\
   word-multi-file				\
@@ -254,6 +255,7 @@ TESTS_ENVIRONMENT =				\
   srcdir='$(srcdir)'				\
   top_srcdir='$(top_srcdir)'			\
   CC='$(CC)'					\
+  CONFIG_HEADER='$(abs_top_builddir)/$(CONFIG_INCLUDE)' \
   GREP_TEST_NAME=`echo $$tst|sed 's,^\./,,;s,/,-,g'` \
   MAKE=$(MAKE)					\
   MALLOC_PERTURB_=$(MALLOC_PERTURB_)		\
